# forex-trading-bot

./: .env.example  .env.live  .gitignore  CLAUDE.md  README.md  event_bus.py  fast_optimize.py  main.py  models.py  monitor.py  param_optimize.py  pyproject.toml  run_optimize.sh  setup.sh  trading-bot-live.service  trading-bot.service
backtesting/: data_loader.py  engine.py  fast_optimize.py  forecast_engine.py  optimizer.py  quick_optimize.py  run_backtest.py  run_ewmac_bt.py
config/: __init__.py
data/: candle_manager.py  economic_calendar.py  sentiment.py  trend_filter.py
db/: database.py  trades.db-shm  trades.db-wal  trades_live.db-shm  trades_live.db-wal
execution/: book_it.py  broker.py  order_executor.py  trailing_stop.py  weekend_flatten.py  withdrawal_alert.py
logs/: trading_bot.log.1  trading_bot.log.2
monitoring/: daily_report.py  telegram_bot.py
portfolio/: vol_target.py
risk/: pair_guard.py  risk_manager.py
scripts/: reconcile_orphans.py
strategies/: base.py  carry.py  confluence.py  ewmac.py  london_breakout.py  mean_reversion.py  range_scalp.py  session_momentum.py  stat_arb.py  trend_following.py
tests/: test_database.py  test_risk_manager.py  test_strategies.py
