[project]
name = "trading-bot"
version = "0.1.0"
description = "Personal Forex/Stock automated trading system"
requires-python = ">=3.11"
dependencies = [
    # Broker APIs
    "oandapyV20>=0.7.2",
    # Data & analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    # TA-Lib requires system library: sudo apt-get install ta-lib
    # "TA-Lib>=0.4.28",
    # Backtesting
    "vectorbt>=0.26.2",
    # Monitoring
    "python-telegram-bot>=21.0",
    # HTTP
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    # Database
    "aiosqlite>=0.20.0",
    # Config
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Utilities
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
